# flashbang

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  TODO.md  build.gradle.kts  cards.typ  cards_internal.typ  encode_keystore.sh  resolve_world.py  rust-toolchain.toml  settings.gradle.kts  test.typ  test_output.txt  truc
.cargo/: config.toml
.github/workflows/: build_apk.yml  release.yml
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/dev/vndx/flashbang/: ExampleInstrumentedTest.kt
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/vndx/flashbang/: Core.kt  FlashbangApplication.kt  MainActivity.kt  World.kt
app/src/main/java/dev/vndx/flashbang/data/: PreferencesSerializer.kt  StudiesSerializer.kt
app/src/main/java/dev/vndx/flashbang/di/: DataStoreModule.kt
app/src/main/java/dev/vndx/flashbang/domain/: Card.kt  Item.kt  Study.kt  Tag.kt
app/src/main/java/dev/vndx/flashbang/rust/uniffi/mobile/: mobile.kt
app/src/main/java/dev/vndx/flashbang/ui/: CardTreeViewModel.kt  CardsViewModel.kt  Charts.kt  Date.kt  ExploreViewModel.kt  Items.kt  SettingsViewModel.kt  Shimmer.kt  StatisticsViewModel.kt  StudiesViewModel.kt  Theme.kt  TopBar.kt
app/src/main/java/dev/vndx/flashbang/ui/screens/: CardHistoryScreen.kt  CardPreviewScreen.kt  CreateStudyScreen.kt  DummyScreen.kt  EditStudyScreen.kt  ExploreScreen.kt  ReviewScreen.kt  Screen.kt  SelectionScreen.kt  SettingsScreen.kt  SourcePreviewScreen.kt  StatisticsScreen.kt  StudiesScreen.kt  StudyFinishedScreen.kt
app/src/main/proto/: settings.proto  studies.proto
app/src/main/res/drawable/: baseline_arrow_forward_32.xml  baseline_auto_awesome_mosaic_32.xml  baseline_insert_chart_32.xml  baseline_school_32.xml  outline_add_32.xml  outline_arrow_back_32.xml  outline_auto_awesome_mosaic_32.xml  outline_clear_day_32.xml  outline_code_32.xml  outline_delete_32.xml  outline_download_32.xml  outline_edit_note_32.xml  outline_flip_32.xml  outline_folder_32.xml  outline_home_32.xml  outline_insert_chart_32.xml  outline_mode_night_32.xml  outline_note_stack_32.xml  outline_package_2_32.xml  outline_palette_32.xml  outline_school_32.xml  outline_settings_32.xml  outline_visibility_off_24.xml  rounded_dashboard_24.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
app/src/test/java/dev/vndx/flashbang/: ExampleUnitTest.kt  StudySelectionTest.kt
app/src/test/java/dev/vndx/flashbang/domain/: TagTest.kt
assets/: main.css
fb-core/: Cargo.toml  build-android.sh
fb-core/assets/: lexend_bold.ttx
fb-core/src/: cards.rs  cards_internal.typ  compile.rs  error.rs  fuzzy.rs  github.rs  lib.rs  scheduler.rs  studies.rs  world.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/fb-android/: Cargo.toml  build-android.sh
rust/fb-android/src/: cache_provider.rs  lib.rs  package_provider.rs
rust/fb-cli/: Cargo.toml
rust/fb-cli/src/: main.rs
rust/fb-core/: Cargo.toml
rust/fb-core/src/: cache.rs  cards.rs  cards_internal.typ  error.rs  fuzzy.rs  github.rs  lib.rs  packages.rs  scheduler.rs  world.rs
rust/fb-web/: .gitignore  Cargo.toml  build-web.sh
rust/fb-web/src/: card.rs  fuzzy.rs  lib.rs  package_provider.rs
src/: algorithm.rs  cards.rs  deck.rs  github.rs  main.rs  popup.rs  selection.rs  settings.rs  stats.rs  storage.rs  tracking.rs  typst_wrap.rs
