[package]
name = "fb-android"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "mobile"

[dependencies]
parking_lot = "0.12"
flate2 = "1.1"
tar = "0.4"
log = "0.4"
uniffi = { version = "0.31.0", features = ["cli"] }
android_logger = { version = "0.15", features = ["android-api-30"] }
fb-core = { path = "../fb-core", features = [
    "uniffi",
    "cache",
    "scheduler",
    "github",
] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "charset",
    "http2",
] }
