[package]
name = "fb-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
fb-core = { path = "../fb-core", default-features = false, features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
