[package]
name = "fb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
parking_lot = "0.12"
serde = "1.0.163"
nom = "8.0"
typst = { version = "0.14", optional = true }
typst-svg = { version = "0.14", optional = true }
typst-kit = { version = "0.14", default-features = false, features = [
    "embed-fonts",
], optional = true }
flate2 = "1.1"
tar = "0.4"
log = "0.4"
nucleo = { version = "0.5", optional = true }
thiserror = "2.0"

fsrs = { version = "5.1.0", optional = true }
uniffi = { version = "0.31.0", features = ["cli"], optional = true }
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "charset",
    "http2",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["scheduler", "github", "fuzzy", "compile"]
uniffi = ["dep:uniffi"]
scheduler = ["dep:fsrs"]
github = ["dep:reqwest"]
cache = []
fuzzy = ["dep:nucleo"]
compile = ["dep:typst", "dep:typst-svg", "dep:typst-kit"]
wasm = ["dep:wasm-bindgen"]
